--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -7,3 +7,6 @@ $border = #bababa
 $border-light = #efefef
 $font-size-header = 1.2rem
 $font-size-description = 0.9rem
+
+$task-done-color = lighten(#7BDA58, 15)
+$task-started-color = #F4F0BB
