--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -10,3 +10,4 @@ $font-size-description = 0.9rem
 
 $task-done-color = lighten(#7BDA58, 15)
 $task-started-color = #F4F0BB
+$task-uncompleted-color = lighten(red, 40)
